syntax = "proto3";

import "Protos/Common/common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Post.API";

package post;


service AccommodationRules {
	rpc GetItems (common.Empty) returns (ItemsList);  
	rpc AddItems (AddItemsRequest) returns (common.Response); 
	rpc RemoveItems (RemoveItemsRequest) returns (common.Response);
}
service AccommodationFacilities {
	rpc GetItems (common.Empty) returns (ItemsList);  
	rpc AddItems (AddItemsRequest) returns (common.Response); 
	rpc RemoveItems (RemoveItemsRequest) returns (common.Response);
}
service AccommodationSpecificities {
	rpc GetItems (common.Empty) returns (ItemsList);  
	rpc AddItems (AddItemsRequest) returns (common.Response); 
	rpc RemoveItems (RemoveItemsRequest) returns (common.Response);
}

message ItemsList {
	repeated common.Item items = 1;
}

message AddItemsRequest {
repeated ItemRequest items = 1;
}
message RemoveItemsRequest {
	repeated int64 items = 1;
}
message ItemRequest {
int64 accommodationId = 1;
int64 itemId = 2;
google.protobuf.StringValue otherValue = 3;
}